base.css
#issue_list tr td a {
    text-align: center;
    font-family: monospace;
    color: black;
}

#issue_list {
    margin: 0px auto;
    margin-top: 150px;
}

.issue_cover {
    margin-left: 50px;
    margin-right: 50px;
    border: 1px solid black;
    height: 250px;
    -webkit-transition: width 1s, height 1s;
    transition: width 1s, height 1s;
}

.issue_cover:hover {
    border: 1px solid black;
    height: 300px;
}

